--- a/assets/view.html
+++ b/assets/view.html
@@ -1,172 +1,218 @@
-<div class="modal-dialog" role="document">
+<div :class="getStyles()" role="document" x-data="Challenge" x-init="id = {{ challenge.id }}">
 	<div class="modal-content">
-		<div class="modal-body">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			</button>
-			<ul class="nav nav-tabs">
-				<li class="nav-item">
-					<a class="nav-link active" href="#challenge">Challenge</a>
-				</li>
-				{% block solves %}
-					<li class="nav-item">
-						<a class="nav-link challenge-solves" href="#solves">
-							{% if solves != None %}
-								{{ solves }} {% if solves > 1 %}Solves{% else %}Solves{% endif %}
-							{% endif %}
-						</a>
-					</li>
-				{% endblock %}
-			</ul>
-			<div role="tabpanel">
-				<div class="tab-content">
-					<div role="tabpanel" class="tab-pane fade show active" id="challenge">
-						<h2 class='challenge-name text-center pt-3'>
-							{{ challenge.name }}
-						</h2>
-						<h3 class="challenge-value text-center">
-							{{ challenge.value }}
-						</h3>
-
-						<div class="challenge-tags text-center">
-							{% block tags %}
-								{% for tag in tags %}
-									<span class='badge badge-info challenge-tag'>{{ tag }}</span>
-								{% endfor %}
-							{% endblock %}
-						</div>
-
-						<span class="challenge-desc">{% block description %}{{ challenge.html }}{% endblock %}</span>
-                        <!-- <div class="mb-3 text-center deployment-start">
+	  <div class="modal-body py-4 px-4 px-sm-5">
+  
+		<div>
+		  <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
+  
+		  <ul class="nav nav-tabs">
+			<li class="nav-item">
+			  <a class="nav-link active" data-bs-target="#challenge" @click="showChallenge()">Challenge</a>
+			</li>
+  
+			{% block solves %}
+			  <li class="nav-item">
+				<a class="nav-link challenge-solves" data-bs-target="#solves" @click="showSolves()">
+				  {% if solves != None %}
+					{{ solves }} Solve{{ solves.cost|pluralize }}
+				  {% endif %}
+				</a>
+			  </li>
+			{% endblock %}
+		  </ul>
+		</div>
+  
+		<div>
+		  <div class="tab-content">
+			<div role="tabpanel" class="tab-pane fade show active" id="challenge">
+			  <h2 class="challenge-name text-center pt-3">
+				{{ challenge.name }}
+			  </h2>
+			  <h3 class="challenge-value text-center">
+				{{ challenge.value }}
+			  </h3>
+  
+  
+			  {% if tags %}
+				<div class="challenge-tags text-center pt-2 pb-3">
+				  {% block tags %}
+					{% for tag in tags %}
+					  <span class="challenge-tag badge bg-info">{{ tag }}</span>
+					{% endfor %}
+				  {% endblock %}
+				</div>
+			  {% endif %}
+  
+			  <span class="challenge-desc">{% block description %}{{ challenge.html }}{% endblock %}</span>
+			                        <!-- <div class="mb-3 text-center deployment-start">
                             <span>
                                 <button onclick="getDeployment(this)" data-deployment="{{ challenge.template_name | safe }}" class="btn btn-dark">
                                     <small style="color:white;"><i class="fas"></i> Get Instance</small>
 								</button>
                             </span>
                         </div> -->
-						<div class="mb-3 text-center deployment-actions">
-							<div class="alert alert-info"></div>
-							
-							<!-- i dont know how to do this better pls fix -->
-							<script>getDeployment("{{ challenge.template_name | safe}}")</script>
-                            
+						<div class="mb-3 text-center deployment-actions" x-data="deployment()" x-init="getDeployment('{{ challenge.template_name | safe}}')">
+							<div class="alert alert-info" x-text="alert" :class="isDanger() && 'alert-danger'" x-show="alert != null"></div>
+							<div class="alert alert-info" x-show="calculateExpiry(new Date(expires))>0">
+								<span class="challenge-connection-info">
+									<p class="challenge-connection-info-label" x-text="'Expires in ' + calculateExpiry(new Date(expires)) + ' minutes.'"></p>
+									<code x-text="'https://'+host"></code>
+								</span>
+							</div>                            
 							<span>
-								<button onclick="createDeployment(this)" data-deployment="{{ challenge.template_name | safe }}" class="create-chal btn btn-primary d-none">
-									<small style="color:white;"><i class="fas"></i> Fetch Instance</small>
+								<button @click="createDeployment()" data-deployment="{{ challenge.template_name | safe }}" x-show="challengeCreateVisible" class="create-chal btn btn-primary" x-bind:disabled="createLoading">
+									<small style="color:white;"><i class="fas" :class="createLoading && 'fa-spin fa-spinner'"></i> Fetch Instance</small>
 								</button>
-                                <button onclick="extendDeployment(this)" data-deployment="{{ challenge.template_name | safe }}" class='extend-chal btn btn-info d-none'>
-                                    <small style='color:white;'><i class="fas"></i> Extend Expiry</small>
+                                <button @click="extendDeployment()" data-deployment="{{ challenge.template_name | safe }}" x-show="challengeUpdateVisible" class='extend-chal btn btn-info' x-bind:disabled="extendLoading">
+                                    <small style='color:white;'><i class="fas" :class="extendLoading && 'fa-spin fa-spinner'"></i> Extend Expiry</small>
 								</button>
 								<!-- <button onclick="resetDeployment(this)" data-deployment="{{ challenge.template_name | safe }}" class='btn btn-warning'>
                                     <small style='color:white;'><i class="fas"></i> Reset Instance</small>
 								</button> -->
-								<button onclick="terminateDeployment(this)" data-deployment="{{ challenge.template_name | safe }}" class='terminate-chal btn btn-danger d-none'>
-                                    <small style='color:white;'><i class="fas"></i> Terminate</small>
+								<button @click="terminateDeployment()" data-deployment="{{ challenge.template_name | safe }}" x-show="challengeUpdateVisible" class='terminate-chal btn btn-danger' x-bind:disabled="terminateLoading">
+                                    <small style='color:white;'><i class="fas" class="terminateLoading && 'fa-spin fa-spinner'"></i> Terminate</small>
 								</button>
                             </span>
                         </div>
 
-						<div class="challenge-hints hint-row row">
-							{% for hint in hints %}
-								<div class='col-md-12 hint-button-wrapper text-center mb-3'>
-									<a class="btn btn-info btn-hint btn-block load-hint" href="javascript:;" data-hint-id="{{ hint.id }}">
-										{% if hint.content %}
-											<small>
-												View Hint
-											</small>
-										{% else %}
-											{% if hint.cost %}
-												<small>
-													Unlock Hint for {{ hint.cost }} points
-												</small>
-											{% else %}
-												<small>
-													View Hint
-												</small>
-											{% endif %}
-										{% endif %}
-									</a>
-								</div>
-							{% endfor %}
-						</div>
-
-						<div class="row challenge-files text-center pb-3">
-							{% for file in files %}
-								<div class='col-md-4 col-sm-4 col-xs-12 file-button-wrapper d-block'>
-									<a class='btn btn-info btn-file mb-1 d-inline-block px-2 w-100 text-truncate'
-									   href='{{ file }}'>
-										<i class="fas fa-download"></i>
-										<small>
-											{% set segments = file.split('/') %}
-											{% set file = segments | last %}
-											{% set token = file.split('?') | last %}
-											{% if token %}
-												{{ file | replace("?" + token, "") }}
-											{% else %}
-												{{ file }}
-											{% endif %}
-										</small>
-									</a>
-								</div>
-							{% endfor %}
-						</div>
-
-						{% if max_attempts > 0 %}
-						<div class="row text-center">
-							<div class="col-md-12">
-								<p>
-									{{ attempts }}/{{ max_attempts }} attempt{{ max_attempts|pluralize }}
-								</p>
-							</div>
-						</div>
-						{% endif %}
-
-						<div class="row submit-row">
-							<div class="col-md-9 form-group">
-								{% block input %}
-									<input id="challenge-id" class="challenge-id" type="hidden" value="{{ challenge.id }}">
-									<input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Flag"/>
-								{% endblock %}
-							</div>
-							<div class="col-md-3 form-group key-submit">
-								{% block submit %}
-								<button id="challenge-submit" class="challenge-submit" type="submit">
-									Submit
-								</button>
-								{% endblock %}
-							</div>
-						</div>
-
-						<div class="row notification-row">
-							<div class="col-md-12">
-								<div id="result-notification" class="alert alert-dismissable text-center w-100"
-									 role="alert" style="display: none;">
-									<strong id="result-message"></strong>
-								</div>
-							</div>
-						</div>
+  
+			  {% if hints %}
+				<div class="challenge-hints hint-row row">
+				  <div class="col-12 mb-3">
+				  {% for hint in hints %}
+					<div x-data="Hint" x-init="id = {{ hint.id }}">
+					  {% if hint.content %}
+					  <details>
+						<summary>View Hint</summary>
+						<div>{{ hint.html | safe }}</div>
+					  </details>
+					  {% else %}
+					  <details @toggle="showHint(event)">
+						<summary>Unlock Hint for {{ hint.cost }} point{{ hint.cost|pluralize }}</summary>
+						<div x-html="html"></div>
+					  </details>
+					  {% endif %}
 					</div>
-
-					<div role="tabpanel" class="tab-pane fade" id="solves">
-						<div class="row">
-							<div class="col-md-12">
-								<table class="table table-striped text-center">
-									<thead>
-									<tr>
-										<td><b>Name</b>
-										</td>
-										<td><b>Date</b>
-										</td>
-									</tr>
-									</thead>
-									<tbody id="challenge-solves-names">
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
+				  {% endfor %}
+				  </div>
 				</div>
+			  {% endif %}
+  
+			  {% if files %}
+				<div class="row challenge-files text-center pb-3">
+				  {% for file in files %}
+					<div class="col-md-4 col-sm-4 col-xs-12 file-button-wrapper d-block">
+					  {% set segments = file.split('/') %}
+					  {% set token = file.split('?') | last %}
+					  {% if token %}
+						{% set filename = segments | last | replace("?" + token, "") %}
+					  {% else %}
+						{% set filename = segments | last %}
+					  {% endif %}
+					  <a
+						  class="btn btn-info btn-file mb-1 d-inline-block px-2 w-100 text-truncate"
+						  href="{{ file }}"
+						  title="{{ filename }}"
+					  >
+						<i class="fas fa-download"></i>
+						<small>
+						  {{ filename }}
+						</small>
+					  </a>
+					</div>
+				  {% endfor %}
+				</div>
+			  {% endif %}
+  
+			  {% if max_attempts > 0 %}
+				<div class="row text-center">
+				  <div class="col-12">
+					<p>
+					  {{ attempts }}/{{ max_attempts }} attempt{{ max_attempts|pluralize }}
+					</p>
+				  </div>
+				</div>
+			  {% endif %}
+  
+			  <div class="row submit-row">
+				<div class="col-12 col-sm-8">
+				  {% block input %}
+					<input
+						id="challenge-id" class="challenge-id" type="hidden"
+						value="{{ challenge.id }}"
+					>
+					<input
+						id="challenge-input" class="challenge-input form-control"
+						type="text" name="submission"
+						@keyup.enter="submitChallenge()"
+						placeholder="Flag" x-model="submission"
+					>
+				  {% endblock %}
+				</div>
+  
+				<div class="col-12 col-sm-4 mt-3 mt-sm-0 key-submit">
+				  {% block submit %}
+					<button
+						id="challenge-submit"
+						class="challenge-submit btn btn-outline-secondary w-100 h-100" type="submit"
+						@click.debounce.500ms="submitChallenge()"
+					>
+					  Submit
+					</button>
+				  {% endblock %}
+				</div>
+			  </div>
+  
+			  <div class="row notification-row">
+				<div class="col-12">
+				  <template x-if="response">
+					{# This alert is re-used for all alerts, so it's important not to make it dismissble #}
+					<div
+						:class="{
+						  'alert text-center w-100 mt-3 alert-success': response.data.status == 'correct',
+						  'alert text-center w-100 mt-3 alert-info': response.data.status == 'already_solved',
+						  'alert text-center w-100 mt-3 alert-danger': response.data.status == 'incorrect',
+						}" role="alert"
+					>
+					  <strong x-text="response.data.message"></strong>
+					  <div x-show="(response.data.status == 'correct' || response.data.status == 'already_solved') && getNextId()">
+						<button @click="nextChallenge()" class="btn btn-info mt-3">Next Challenge</button>
+					  </div>
+					</div>
+				  </template>
+				</div>
+			  </div>
 			</div>
+  
+			<div role="tabpanel" class="tab-pane fade" id="solves">
+			  <div class="row">
+				<div class="col-md-12">
+				  <table class="table table-striped text-center">
+					<thead>
+					<tr>
+					  <td><b>Name</b>
+					  </td>
+					  <td><b>Date</b>
+					  </td>
+					</tr>
+					</thead>
+					<tbody id="challenge-solves-names">
+					<template x-for="solve in solves">
+					  <tr>
+						<td>
+						  <a :href="solve.account_url" x-text="solve.name"></a>
+						</td>
+						<td x-text="solve.date"></td>
+					  </tr>
+					</template>
+					</tbody>
+				  </table>
+				</div>
+			  </div>
+			</div>
+		  </div>
 		</div>
+	  </div>
 	</div>
-</div>
+  </div>
+  
